# openMO

./: .clang-format  .gitignore  CMakeLists.txt
openMO/: bounded  bracket  brent  common  openMO  powell
openMOTest/: CMakeLists.txt  testBounded.cxx  testBracket.cxx  testBrent.cxx  testPowell.cxx
